# stack-vm

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: builder.rs  code.rs  code_deserialize.rs  code_serialize.rs  frame.rs  from_byte_code.rs  immutable_table.rs  instruction.rs  instruction_table.rs  instructions.rs  lib.rs  machine.rs  mutable_table.rs  object.rs  stack.rs  table.rs  to_byte_code.rs  write_many_table.rs  write_once_table.rs
src/acceptance/: arithmetic.rs  conditionals.rs  functions.rs  mod.rs  non_operand_labels.rs
src/builder/: label.rs  label_ref.rs  mod.rs  scalar.rs
src/code/: debug.rs  from_byte_code.rs  mod.rs  to_byte_code.rs
