[package]
name = "stack-vm"
version = "0.2.0"
authors = ["James Harton <james@automat.nz>"]
license = "MIT"
description = "A generic, reusable, stack-based virtual machine."
documentation = "https://docs.rs/crate/stack-vm"
repository = "https://gitlab.com/huia-lang/stack-vm"
readme = "README.md"

[badges]
gitlab = { repository = "huia-lang/stack-vm" }

[dependencies]
rmp = "^0.8"
