[package]
name = "stack-vm"
version = "1.0.1"
authors = ["James Harton <james@harton.nz>", "flydecahedron <flydecahedron@gmail.com"]
license = "MIT"
description = "A generic, reusable, stack-based virtual machine."
repository = "https://github.com/flydecahedron/stack-vm"
readme = "README.md"

[dependencies]
rmp = "^0.8"
shipyard = { git = "https://github.com/leudz/shipyard", features = ["proc"] }